force-app/main/default/objects/Payment_Information__c/fields/Ammount__c.field-meta.xml
<CustomField>
    <fullName>Ammount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>