force-app/main/default/objects/Payment_Information__c/fields/Checking_or_Savings__c.field-meta.xml
<CustomField>
    <fullName>Checking_or_Savings__c</fullName>
    <label>Checking or Savings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>