force-app/main/default/objects/Payment_Information__c/fields/CVV_Number__c.field-meta.xml
<CustomField>
    <fullName>CVV_Number__c</fullName>
    <label>CVV Number</label>
    <length>60</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>