force-app/main/default/objects/Payment_Information__c/fields/First_Name_on_Card__c.field-meta.xml
<CustomField>
    <fullName>First_Name_on_Card__c</fullName>
    <label>First Name on Card</label>
    <length>100</length>
    <type>Text</type>
</CustomField>