force-app/main/default/objects/Payment_Information__c/fields/Last_Name_on_Card__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_on_Card__c</fullName>
    <label>Last Name on Card</label>
    <length>100</length>
    <type>Text</type>
</CustomField>