force-app/main/default/objects/Payment_Information__c/fields/Name_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Account__c</fullName>
    <label>Name on Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>