force-app/main/default/objects/Payment_Information__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payment Information</relationshipLabel>
    <relationshipName>Payment_Information</relationshipName>
    <type>Lookup</type>
</CustomField>