force-app/main/default/objects/Payment_Information__c/fields/Payment_For__c.field-meta.xml
<CustomField>
    <fullName>Payment_For__c</fullName>
    <label>Payment For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>