force-app/main/default/objects/Payment_Information__c/fields/Postal_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Zip_Code__c</fullName>
    <label>Postal/Zip Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>