force-app/main/default/objects/Payment_Information__c/fields/Send_Payment_Info_to_Manager__c.field-meta.xml
<CustomField>
    <fullName>Send_Payment_Info_to_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Payment Info to Manager</label>
    <type>Checkbox</type>
</CustomField>