force-app/main/default/objects/Payment_Information__c/fields/Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Id__c</fullName>
    <label>Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>