force-app/main/default/objects/Payment_Information__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Payment Information</fullName>
                <default>true</default>
                <label>New Payment Information</label>
            </value>
            <value>
                <fullName>Payment Confirmed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>