force-app/main/default/objects/Payment_Information__c/recordTypes/Cash.recordType-meta.xml
<RecordType>
    <fullName>Cash</fullName>
    <active>true</active>
    <description>Choose this to open layout with Cash/Cheque section on it.</description>
    <label>Cash</label>
</RecordType>