force-app/main/default/objects/Payment_Information__c/validationRules/CVV_restricted_to_four.validationRule-meta.xml
<ValidationRule>
    <fullName>CVV_restricted_to_four</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(NOT(Isblank(CVV_Number__c)),

OR(LEN(CVV_Number__c)&gt;4,LEN(CVV_Number__c)&lt;3)),true,false)</errorConditionFormula>
    <errorMessage>CVV Number must be of Three/Four digit&apos;s</errorMessage>
</ValidationRule>