force-app/main/default/objects/Payment_Information__c/validationRules/Routing_Number_Restricted_to_nine.validationRule-meta.xml
<ValidationRule>
    <fullName>Routing_Number_Restricted_to_nine</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(NOT(Isblank(Routing_Number__c)),

OR(LEN(Routing_Number__c)&gt;9,LEN(Routing_Number__c)&lt;9)),true,false)</errorConditionFormula>
    <errorMessage>Routing Number Must be of 9 digit&apos;s</errorMessage>
</ValidationRule>