force-app/main/default/objects/Payment_Information__c/listViews/My_Payment_Information.listView-meta.xml
<ListView>
    <fullName>My_Payment_Information</fullName>
    <columns>NAME</columns>
    <columns>First_Name_on_Card__c</columns>
    <columns>Last_Name_on_Card__c</columns>
    <columns>Credit_Card_Number__c</columns>
    <columns>Expiration_Month__c</columns>
    <columns>Expiration_Year__c</columns>
    <columns>Payment_Method__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Payment Information</label>
</ListView>