force-app/main/default/objects/Payment_Information__c/listViews/New_Payment_Information.listView-meta.xml
<ListView>
    <fullName>New_Payment_Information</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>New Payment Information</value>
    </filters>
    <label>New Payment Information</label>
</ListView>