force-app/main/default/objects/Payment_Information__c/listViews/Payment_confirmed.listView-meta.xml
<ListView>
    <fullName>Payment_confirmed</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Payment Confirmed</value>
    </filters>
    <label>Payment confirmed</label>
</ListView>